[package]
name = "chrono_utils"
version = "0.1.3"
authors = ["Mikhail Svetov <svmk-work@yandex.ru>"]
description = "Utils for chrono library. It's may parse w3c date."
documentation = "http://svmk.github.io/chrono_utils/0.1.0/chrono_utils/"
repository = "https://github.com/svmk/rust-chrono-utils"
license = "MIT"

[dependencies]
chrono="^0.4"
